<resources>
    <string name="app_name">新平板定位</string>
    <string name="sp_setting">串口设置</string>
    <string name="path">路径</string>
    <string name="bd_rate">波特率</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="function_not_available">此功能未开通！</string>
    <string name="choose_bd_rate">选择波特率</string>
    <string name="blank">空值</string>
    <string name="please_input_freq">请输入主频</string>
    <string name="please_set_receive_mode">请设置接收模式</string>
    <string name="please_set_running_mode">请设置运行模式</string>
    <string name="CKFO_function">数据输出校验功能</string>
    <string name="_1pps_function">1PPS功能：</string>
    <string name="set_log_level">设置Log等级</string>
    <string name="gps_module_test">GPS模块测试</string>
    <string name="sk9042_module_test">SK9042模块测试</string>
    <string name="conbine_test">联合测试</string>
    <string name="settting">设置</string>
    <string name="map">地图</string>
    <string name="invalid_fix_quality">无效</string>
    <string name="gps_fix_quality">单点</string>
    <string name="dgps_fix_quality">伪距</string>
    <string name="flaot_fix_quality">浮点</string>
    <string name="rtk_fix_quality">固定</string>
    <string name="default_fix_quality">缺省</string>
    <array name="sk9042_functions">
        <item>测试连接</item>//0
        <item>算法复位</item>//1
        <item>日期时间</item>//2
        <item>设置波特率</item>//3
        <item>查询波特率</item>//4
        <item>设置频点</item>//5
        <item>查询频点</item>//6
        <item>设置接收模式</item>//7
        <item>查询接收模式</item>//8
        <item>设置运行模式</item>//9
        <item>查询运行模式</item>//10
        <item>设置数据输出校验功能</item>//11
        <item>查询数据输出校验功能</item>//12
        <item>设置1PPS开</item>//13
        <item>设置1PPS关</item>//14
        <item>查询1PPS开关</item>//15
        <item>启动升级</item>//16
        <item>启动升级数据传输</item>//17
        <item>查询SK9042系统版本</item>//18
        <item>设置产品ID</item>//19
        <item>查询产品ID</item>//20
        <item>查询信噪比</item>//21
        <item>查询接收状态</item>//22
        <item>查询时偏</item>//23
        <item>查询频偏</item>//24
        <item>查询Tuner状态</item>//25
        <item>译码统计</item>//26
        <item>Log等级设置</item>//27
        <item>开始搜台</item>//28
        <item>停止搜台</item>//29
        <item>校验频率</item>//30
        <item>查询SK9042差分输出端波特率</item>//31
    </array>
    <string name="title_activity_mapping">MappingActivity</string>
    <string name="off_line_map">离线地图</string>
    <string name="combine_test">综合测试</string>
    <string name="test">测试</string>
    <string name="delete">删除</string>
    <string name="check_update">检查更新</string>
    <string name="update">升级</string>
    <string name="offline_map_list">离线地图下载清单</string>
    <string name="search">搜索</string>
    <string name="down_load">下载</string>
    <string name="downloaded">已下载</string>
    <string name="begin_to_download">开始下载</string>
    <string name="set_freq">设置主频</string>
    <string name="check_freq">查询主频</string>
    <string name="sk9042_current_freq_is">SK9042当前频点是</string>
    <string name="sk9042_freq_setting">SK9042频点设置：</string>
    <string name="freq_param_is_not_stored_in_flash">FLASH仍未写入频点信息。</string>
    <string name="await_module_initializing">模块启动中，请稍候......</string>
    <string name="satellite_map">卫星图</string>
    <string name="function_deleted">此功能已经被删除!</string>
    <string name="please_input_chip_id">请输入芯片编号</string>
    <string name="pick_src_file">请点选文件</string>
    <string name="return_previous">返回上一层</string>
    <string name="exit">退出</string>
    <string name="please_select_bd_rate">请选择波特率</string>
    <string name="please_input_file_name">请输入文档名称</string>
    <string name="start_record_gpgga_data">开始记录GPGGA数据</string>
    <string name="stop_record_gpgga_data">停止记录GPGGA数据</string>
    <string name="pause">暂停</string>
    <string name="start">开始</string>
    <string name="save">保存</string>
    <array name="gngga_test_lines">
        <item>$GNGGA,061923.00,2234.22210054,N,11356.24785338,E,5,05,2.8,48.923,M,-3.475,M,0.0,0693*67</item>
        <item>$GNGGA,061924.00,2234.22226763,N,11356.24775916,E,4,05,2.8,49.498,M,-3.475,M,0.0,0693*63</item>
        <item>$GNGGA,061925.00,2234.22237929,N,11356.24770956,E,5,05,2.8,49.872,M,-3.475,M,0.0,0693*6B</item>
        <item>$GNGGA,032352.00,2234.2175316,N,11356.2069331,E,1,16,0.9,23.5690,M,-3.512,M,,*7A</item>
        <item>$GNGGA,032425.00,2234.2174743,N,11356.2077385,E,1,15,1.0,22.1027,M,-3.512,M,,*7C</item>
        <item>$GNGGA,032547.00,2234.2797039,N,11356.2046261,E,5,13,2.2,21.7192,M,-3.514,M,01,0004*7B</item>
        <item>$GNGGA,034231.00,2234.8432929,N,11355.9788411,E,5,16,1.5,23.4319,M,-3.545,M,01,0004*7C</item>
        <item>$GNGGA,034513.00,2234.9993622,N,11356.0810654,E,5,13,2.0,15.6070,M,-3.543,M,01,0004*71</item>
        <item>$GNGGA,040318.00,2235.0026232,N,11356.2629109,E,4,18,1.7,12.2515,M,-3.532,M,01,0004*71</item>
        <item>$GNGGA,040737.00,2234.4631647,N,11356.6016715,E,5,19,1.3,15.4377,M,-3.496,M,01,0004*76</item>
        <item>$GNGGA,041151.00,2234.7108777,N,11356.0470343,E,5,13,1.7,31.1071,M,-3.537,M,01,0004*7A</item>
        <item>$GNGGA,041520.00,2234.5958561,N,11356.5999226,E,5,16,1.6,17.9493,M,-3.500,M,01,0004*7B</item>
        <item>$GNGGA,041837.00,2234.2885967,N,11356.2338380,E,4,18,1.7,19.7801,M,-3.513,M,01,0004*7C</item>
    </array>
</resources>
