<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        style="@style/AlertDialogTextTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            style="@style/AlertDialogTextContent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/path"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/dialog_spin_sp_path"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            style="@style/AlertDialogTextContent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/bd_rate"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/dialog_spin_bd_rate"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_btn_confirm"
            style="@style/AlertDialogButton"
            android:text="@string/confirm"/>
        <Button
            android:id="@+id/dialog_btn_cancel"
            style="@style/AlertDialogButton"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>