<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AlertDialogTextTitle"
        android:text="@string/blank"/>
    <EditText
        android:id="@+id/dialog_edt_input"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textSize="@dimen/sp_20"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AlertDialogButton"
            android:text="@string/confirm"/>
        <Button
            android:id="@+id/dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AlertDialogButton"
            android:text="@string/cancel"/>

    </LinearLayout>


</LinearLayout>