<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/AlertDialogTextTitle"
            android:text="@string/pick_src_file"/>
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_previous"/>
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textGrey">
        <TextView
            android:id="@+id/tv_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="/download/xxx"
            android:layout_margin="@dimen/dp_2"
            android:background="@android:color/white"
            android:textSize="@dimen/sp_15"/>
    </FrameLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/browser"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_350"/>

</LinearLayout>